<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_fav_button"
          android:title="Favourite"
          android:icon="@drawable/ic_fav_border"
          app:showAsAction="always"/>
</menu>
